--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT = 3000
 SESSION_SECRET = 'this is a super secret string'
-MONGODB_URI=“mongodb://localhost:27017/state-server”
+MONGODB_URI = "mongodb://localhost:27017/statesApp"
