state controller working

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT = 3000
 SESSION_SECRET = 'this is a super secret string'
-MONGODB_URI = "mongodb://localhost:27017/statesApp"
+MONGODB_URI = "mongodb://localhost:27017/statesApp2"
